<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dong.com.weixin.activity.RegistActivity"
    android:orientation="vertical"
    android:background="@color/writer"
    >

    <include layout="@layout/activity_title_two"></include>

    <LinearLayout

        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_marginRight="5dp"
            android:padding="10dp"
            android:layout_gravity="bottom"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_nicheng"/>
        <EditText
            android:layout_gravity="bottom"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:id="@+id/et_nickname"
            android:hint="@string/regist_nicheng_hint"
            android:background="@android:color/transparent"
            android:layout_weight="8"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:clickable="true"
            android:layout_marginRight="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/regist_ph_selector"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_one"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="80dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/green"></LinearLayout>
    <RelativeLayout
        android:clickable="true"
        android:background="@drawable/list_white_selector"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_area"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/green"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_name"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/contant_line"></LinearLayout>

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_86"/>
        <EditText
            android:inputType="phone"
            android:singleLine="true"
            android:id="@+id/et_phone"
            android:hint="@string/login_phone"
            android:background="@android:color/transparent"
            android:layout_weight="8"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/im_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/nk"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_two"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/green"></LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_pwd"/>
        <EditText
            android:layout_gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:id="@+id/et_pwd"
            android:hint="@string/login_pwd"
            android:background="@android:color/transparent"
            android:layout_weight="8"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:clickable="true"

            android:id="@+id/im_delete_pwd"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:background="@drawable/regist_err_selector"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_three"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/contant_line"></LinearLayout>
    <Button
        android:id="@+id/bt_login"
        android:textColor="@color/writer"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_type_phone"
        android:background="@drawable/btn_green_selector"/>
    <TextView
        android:text="@string/regist_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"/>
</LinearLayout>
