<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dong.com.weixin.activity.LoginActivity"
    android:orientation="vertical"
    android:background="@color/writer">

    <include layout="@layout/activity_title_two"></include>

    <RelativeLayout
        android:clickable="true"
        android:background="@drawable/list_white_selector"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_area"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/green"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_name"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/contant_line"></LinearLayout>

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_86"/>
        <EditText
            android:inputType="phone"
            android:singleLine="true"
            android:id="@+id/et_phone"
            android:hint="@string/login_phone"
            android:background="@android:color/transparent"
            android:layout_weight="8"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/im_delete"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/nk"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/green"></LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_marginLeft="10dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密码"/>
        <EditText
            android:inputType="textPassword"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:id="@+id/et_pwd"
            android:hint="@string/login_pwd"
            android:background="@android:color/transparent"
            android:layout_weight="8"
            android:layout_width="80dp"
            android:layout_height="wrap_content" />
        <ImageView

            android:id="@+id/im_delete_pwd"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@mipmap/nk"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/contant_line"></LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:textColor="@color/writer"
        android:textSize="17sp"
        android:padding="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/btn_green_selector"/>

    <TextView
        android:textSize="14sp"
        android:textColor="@color/login_other"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sms"/>
    <LinearLayout
        android:layout_marginBottom="25dp"
        android:gravity="bottom|center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:textSize="16sp"
            android:textColor="@color/login_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_error"/>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="1dp"
            android:layout_height="30dp"
            android:background="@color/contant_line"></TextView>
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:textSize="16sp"
            android:textColor="@color/login_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_other"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
