<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:hyman="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/writer">
    <include

        layout="@layout/activity_title"
        ></include>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_weight="1"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <LinearLayout
        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_bg">
    </LinearLayout>

    <LinearLayout

        android:layout_weight="0"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <dong.com.weixin.ui.ChangeColorIconWithText
                android:id="@+id/id_indicator_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                hyman:icon="@mipmap/weixin_normal"
                hyman:text="@string/app_name"
                hyman:text_size="12sp"
                hyman:color="#ff45c01a" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <dong.com.weixin.ui.ChangeColorIconWithText
            android:id="@+id/id_indicator_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:padding="5dp"
            hyman:icon="@mipmap/contact_list_normal"
            hyman:text="@string/contact"
            hyman:text_size="12sp"
            hyman:color="#ff45c01a" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <dong.com.weixin.ui.ChangeColorIconWithText
            android:id="@+id/id_indicator_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="3dp"
            android:paddingLeft="3dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            hyman:icon="@mipmap/find_normal"
            hyman:text="@string/find"
            hyman:text_size="12sp"
            hyman:color="#ff45c01a" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        <dong.com.weixin.ui.ChangeColorIconWithText
            android:id="@+id/id_indicator_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            hyman:icon="@mipmap/profile_normal"
            hyman:text="@string/mine"
            hyman:text_size="12sp"
            hyman:color="#ff45c01a" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
